Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages.

Changelog for smp_utils-0.94 [20081014]
  - sgv4: more detail in error messages
  - sgv4: drop scsi.h include, gives problems with lk 2.6.27

Changelog for smp_utils-0.93 [20080106]
  - sgv4: add new interface
  - smp_phy_control: sync with sas2r10
  - smp_rep_phy_sata: affiliation contexts, added sas2r08
  - smp_discover: add '--list' option for attribute=value output
  - smp_rep_general: sync with sas2r09..12
  - smp_discover, smp_discover_list: sync with sas2r09..12
    - warn if expander's SAS address is different from requested
  - add smp_rep_exp_route_tbl utility
  - abridge output from responses when prior to SAS-2
  - rename this file from CHANGELOG to ChangeLog
  - place code in subversion repository
  - move smp_lib.h into include directory
  - move man pages into doc directory
    - add 'conforms to' section
  - fix FreeBSD build

Changelog for smp_utils-0.92 [20061208]
  - all: suggest using '-v' if smp_send_req() fails
  - smp_lib: sync function names and results with sas2r07
  - smp_rep_general: sync with sas2r07
  - smp_rep_route_info: add '--multiple' and '--num="
    options. Underlying SMP function may be called multiple
    times to show one line per phy's route table.
  - smp_lib.h: add C++ 'extern "C" ' wrapper
  - smp_discover+smp_discover_list: sync with sas2r07
  - smp_conf_general: add new SMP function
  - smp_utils.8: suggestions for finding expander SAS addresses
    and mptsas ioc_num
  - Makefile.freebsd: builds utilities on FreeBSD
  - man pages: cleanup

Changelog for smp_utils-0.91 [20060822]
  - add '--multiple' to smp_discover
  - add uniform exit status values (see 'man smp_utils')
  - fix affiliations flags in smp_rep_phy_sata
  - report bad operation abbreviations in smp_phy_control
  - add '--change_report' option to smp_rep_general