@@ -2,11 +2,12 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages.
 
-Changelog for smp_utils-0.94 [20081014]
+Changelog for smp_utils-0.94 [20081014] [svn:r35]
   - sgv4: more detail in error messages
   - sgv4: drop scsi.h include, gives problems with lk 2.6.27
+  - mpt: allow either /dev/mptctl or /dev/mpt2ctl [10,200-221]
 
-Changelog for smp_utils-0.93 [20080106]
+Changelog for smp_utils-0.93 [20080106] [svn:r7]
   - sgv4: add new interface
   - smp_phy_control: sync with sas2r10
   - smp_rep_phy_sata: affiliation contexts, added sas2r08
